--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,20 @@
 body {
     background-color: #f6f7f8;
 }
+
+#cart-items::-webkit-scrollbar {
+    width: 5px;
+    /* Ajuste a largura da barra conforme necessário */
+}
+
+#cart-items::-webkit-scrollbar-thumb {
+    background-color: red;
+    /* Cor da barra de rolagem */
+    border-radius: 10px;
+    /* Borda arredondada da barra de rolagem */
+}
+
+#cart-items::-webkit-scrollbar-track {
+    background-color: transparent;
+    /* Cor de fundo da área da barra de rolagem */
+}
